MMA-7817 små fiks